modernize code